objects/User_Story_Metadata__c.object
<CustomObject>
    <fields>
        <fullName>Metadata_API_Name__c</fullName>
        <label>Metadata API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Potential Conflict</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Conflict Resolved</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <label>User Story</label>
        <referenceTo>User_Story__c</referenceTo>
        <relationshipLabel>User Story Metadata</relationshipLabel>
        <relationshipName>User_Story_Metadata</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>User Story Metadata</label>
    <nameField>
        <label>User Story Metadata Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Story Metadata</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>